--- a/himsi/pubspec.yaml
+++ b/himsi/pubspec.yaml
@@ -30,7 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    # http: ^0.13.3
+  
+  # http: ^1.1.2
+  image_picker: ^1.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
