--- a/himsi/pubspec.yaml
+++ b/himsi/pubspec.yaml
@@ -31,13 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
   
-  http: ^1.1.2
+  provider: ^6.1.1
+  http: ^0.13.6
   image_picker: ^1.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+  - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
